# useGit

./: CMakeLists.txt  README.md  database.db  environment.h  execute.sh  install.sh  main.c  usegit
config/database/: database.c  database.h
controllers/: cli.controller.c  controllers.factory.c  ui-cli.controller.c
domain/: controllers.h  entities.h  usecases.h
infrastructure/persistence/: repositories.c  repositories.h
infrastructure/persistence/users/: data.c  users.c  users.h
usecases/: createGitConfiguration.c  listGitConfigurations.c  useGitConfiguration.c
utils/: helpers.c  helpers.h
